--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -780,6 +780,24 @@ input[type='checkbox'] {
   margin-right: 0.125rem;
 }
 
+/* Cookie Popup */
+#cookies-eu-banner {
+  text-align: center;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  background: white;
+  z-index: 999;
+  padding: 10px 50px;
+  border: 1px solid black;
+  margin-bottom: 2px;
+}
+
+#cookies-eu-banner > a,
+button {
+  margin: 0 5px;
+}
+
 /*********************/
 /*    04. Header     */
 /*********************/
@@ -1359,8 +1377,8 @@ input[type='checkbox'] {
 /*     14. About     */
 /*********************/
 .basic-4 {
-  padding-top: 7rem;
-  padding-bottom: 4rem;
+  padding-top: 4rem;
+  padding-bottom: 2rem;
   text-align: center;
 }
 
@@ -1433,8 +1451,8 @@ input[type='checkbox'] {
 /*     15. Contact     */
 /***********************/
 .form-2 {
-  padding-top: 7rem;
-  padding-bottom: 6.25rem;
+  padding-top: 4rem;
+  padding-bottom: 2rem;
   background: url('/images/contact-background.jpg') center center no-repeat;
   background-size: cover;
 }
@@ -1462,22 +1480,8 @@ input[type='checkbox'] {
   vertical-align: 3%;
 }
 
-.form-2 .map-responsive {
-  position: relative;
-  overflow: hidden;
-  height: 0;
-  margin-bottom: 4rem;
-  padding-bottom: 70%;
-  border-radius: 0.25rem;
-}
-
-.form-2 .map-responsive iframe {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  border: none;
+.form-2 img {
+  padding-bottom: 20px;
 }
 
 /**********************/
@@ -1938,10 +1942,6 @@ a:hover.back-to-top {
   /* end of pricing */
 
   /* Request */
-  .form-1 {
-    padding-top: 7.5rem;
-  }
-
   .form-1 .text-container {
     margin-top: 1.5rem;
     margin-bottom: 0;
